# kuwahara

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  branchbench.py  cmake_install.cmake  compile_commands.json  kuwahara  timer.py
src/: BGRImage.hpp  RunningStat.hpp  kernel.cu  kernel.cuh  main.cpp  pixel.cuh  pixel.hpp  print.hpp  quadrant.cuh  quadrant.hpp  welford.hpp  wrapper.cuh
